# Days_of_rl

./: .gitignore  README.md  pyproject.toml
actor_critic/: a3c_grad.py  pong_a2c.py  pong_a2c_tune.py  rl_manim_visualization.ipynb
actor_critic/lib/: common.py
envs/cartpole/: cross_entropy.py
envs/frozenlake/: cross_entropy_naive.py  cross_entropy_non_slippery.py  cross_entropy_v_iter.py  cross_entropy_work.py  q_iter.py  q_learning_ch6.py  test.ipynb  v_iter.py
envs/pong/: dqn_pong.py  rl.ipynb
envs/wrappers/: wrapper.py
model/: dqn_model.py
policy_gradients/: cartpole_pg.ipynb  dqn_reinforce.ipynb  pong_pg_tune.ipynb
tests/: dqn_pong_test.py
textworld/: rl_textworld.ipynb
webnavigation/adhoc/: wob_create.py
