[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ale-py>=0.11.2",
    "dotenv>=0.9.9",
    "gymnasium>=1.2.2",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "stable-baselines3>=2.7.0",
    "torch>=2.9.1",
    "wandb>=0.23.0",
]
